# ivpm

./: .buildinfo  .envrc  .gitignore  .project  .pydevproject  Agents.md  EXPLORATION_SUMMARY.txt  IVPM_CODEBASE_ANALYSIS.md  LICENSE  Makefile  README.md  agents-handler-design.md  azure-pipelines.yml  bootstrap.sh  caching.html  conftest.py  core_concepts.html  dep-set-inheritance-plan.md  dependency_sets.html  deps_source.html  diagnostics.html  environment_paths.html  example.md  extending_ivpm.html  genindex.html  getting_started.html  git_integration.html  git_worktrees.html  github_releases.html  handlers.html  index.html  integrations.html  introduction.html  ivpm-build-separation-design.md  ivpm.json  ivpm.py  ivpm.schema.json  ivpm.yaml  lazy-venv-design.md  modules-implementation-plan.md  (+22 more)
.github/workflows/: ci.yml
_sources/: caching.rst.txt  core_concepts.rst.txt  dependency_sets.rst.txt  deps_source.rst.txt  environment_paths.rst.txt  extending_ivpm.rst.txt  getting_started.rst.txt  git_integration.rst.txt  git_worktrees.rst.txt  github_releases.rst.txt  handlers.rst.txt  index.rst.txt  introduction.rst.txt  node_packages.rst.txt  package_lock.rst.txt  package_types.rst.txt  python_packages.rst.txt  quickstart.rst.txt  reference.rst.txt  show_deps.rst.txt  troubleshooting.rst.txt  workflows.rst.txt
doc/: Changes.md  requirements.txt
doc/source/: Notes.md  conf.py  index.rst  introduction.rst  reference.rst
docs/: Changes.md  Notes.md  cache.md  clone_cmd.md  docs-update-plan.md  fusesoc-examples-design.md  fusesoc-implementation-plan.md  fusesoc-integration.md  gha_cache_implementation_plan.md  gha_cache_plan.md  packages_and_types.md  pkg-content-type-design.md  pty-interactive-subprocess-design.md  show-command-plan.md  tui_update.md
docs/source/: caching.rst  conf.py  core_concepts.rst  dependency_sets.rst  deps_source.rst  diagnostics.rst  environment_paths.rst  extending_ivpm.rst  getting_started.rst  handlers.rst  index.rst  integrations.rst  introduction.rst  multi_file.rst  package_lock.rst  package_types.rst  python_packages.rst  reference.rst  troubleshooting.rst  variables.rst  workflows.rst
etc/: ivpm.info
examples/agent-skills/: .envrc  .gitignore  README.md  blink.lpf  blink.v  ivpm.yaml  tb_blink.sv
examples/fusesoc/: QUICK_START.md  README.md  SUMMARY.txt  TEST.md
py/: pyvenv.cfg
scripts/: git  ivpm.py  ivpm.py.sav
src/ivpm/: __init__.py  __main__.py  __version__.py  arg_utils.py  cache.py  cmd_git_status.py  cmd_git_update.py  cmd_init.py  cmd_share.py  cmd_snapshot.py  cmd_update.py  deps_source.py  diagnostics.py  env_spec.py  git_worktree.py  ivpm_subprocess.py  ivpm_yaml_reader.py  ivpm_yaml_writer.py  modules_interface.py  msg.py  out_wrapper.py  package.py  package_dir.py  package_factory.py  package_factory_dir.py  package_factory_file.py  package_factory_git.py  package_factory_http.py  (+45 more)
src/ivpm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: ivpm.py  ivpm_chisel.mk
test/unit/data/pyproject_leaf2/: pyproject.toml
(+191 files in other folders)
