
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ivpm"
version = "2.6.0"
dependencies = [
    "httpx>=0.28.1,<1.0",
    "pyyaml",
    "pyyaml-srcinfo-loader",
    "rich",
    "setuptools",
    "toposort",
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "IVPM (IP and Verification Package Manager) is a project-internal package manager."
license = {file = "LICENSE" }

[project.scripts]
ivpm = "ivpm.__main__:main"

[tool.setuptools.package-data]
ivpm = ['scripts/*', 'templates/*', 'share/*', 'share/*.md', 'share/cmake/*']

[project.entry-points."ivpm.handlers"]
python = "ivpm.handlers.package_handler_python:PackageHandlerPython"
direnv = "ivpm.handlers.package_handler_direnv:PackageHandlerDirenv"
skills = "ivpm.handlers.package_handler_skills:PackageHandlerSkills"

